<resources>
    <string name="app_name">GuideMe</string>
    <string name="search_by_name_mode_image_view_content_description">Search by</string>
    <string name="nearest_objects_mode_image_view_content_description">Nearest objects</string>
    <string name="select_on_map_mode_image_view_content_description">Select on map</string>
    <string name="favourites_mode_image_view_content_description">Favourites</string>
    <string name="search_by_name_label">Search by name</string>
    <string name="nearest_objects_label">Nearest objects</string>
    <string name="select_on_map_label">Select on map</string>
    <string name="favourites_label">Favourites</string>

    <string name="api_version">1.2.4</string>
    <string name="mtgo_region_type">country,city</string>
    <string name="mtgo_search_result_limit">500</string>

    <string name="mtgo_country_type">country</string>
    <string name="mtgo_city_type">city</string>
    <string name="mtgo_museum_type">museum</string>
    <string name="mtgo_tour_type">tour</string>

    <string name="mtgo_publisher">publisher</string>

    <string name="http_get_method">GET</string>
    <string name="search_edit_text_hint">I\'m looking for...</string>
    <string name="search_button_text">Search</string>

    <string name="sort_by_name_asc_action">Sort by name asc</string>
    <string name="sort_by_name_desc_action">Sort by name desc</string>
    <string name="sort_by_rating_asc_action">Sort by rating asc</string>
    <string name="sort_by_rating_desc_action">Sort by rating desc</string>
    <string name="mtgobject_parcel_key">MTGObjectParcel</string>
    <string name="mtgobject_child_parcel_key">MTGObjectChildParcel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cast_to_interface_exception_message">must implement %1$s</string>
    <string name="point_image_content_descr">Point image</string>
    <string name="mtgo_type_story_navigation">story_navigation</string>

    <string name="message_trigger_zone_unidentified">trigger zone type unidentified</string>
</resources>
