<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">


    <ImageView
        android:id="@+id/iv_search_by_name_mode"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:scaleType="fitXY"
        android:contentDescription="@string/search_by_name_mode_image_view_content_description"
        android:src="@drawable/ic_search_black_24dp"

        app:layout_constraintBottom_toTopOf="@+id/iv_select_on_map_mode"

        app:layout_constraintEnd_toStartOf="@+id/iv_nearest_objects_mode"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/iv_search_by_name_mode"
        app:layout_constraintEnd_toEndOf="@id/iv_search_by_name_mode"
        app:layout_constraintTop_toTopOf="@id/iv_search_by_name_mode"
        app:layout_constraintBottom_toBottomOf="@id/iv_search_by_name_mode"

        android:text="@string/search_by_name_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark" />

    <ImageView
        android:id="@+id/iv_nearest_objects_mode"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:scaleType="fitXY"
        android:contentDescription="@string/nearest_objects_mode_image_view_content_description"
        app:layout_constraintBottom_toTopOf="@+id/iv_favourites_mode"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_search_by_name_mode"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_near_me_yellow_24dp"
        android:background="#BBBBBB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/iv_nearest_objects_mode"
        app:layout_constraintEnd_toEndOf="@id/iv_nearest_objects_mode"
        app:layout_constraintTop_toTopOf="@id/iv_nearest_objects_mode"
        app:layout_constraintBottom_toBottomOf="@id/iv_nearest_objects_mode"

        android:text="@string/nearest_objects_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#228B22" />

    <ImageView
        android:id="@+id/iv_select_on_map_mode"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:scaleType="fitXY"
        android:contentDescription="@string/select_on_map_mode_image_view_content_description"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_favourites_mode"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_search_by_name_mode"
        android:src="@drawable/ic_map_green_24dp"
        android:background="#BBBBBB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/iv_select_on_map_mode"
        app:layout_constraintEnd_toEndOf="@id/iv_select_on_map_mode"
        app:layout_constraintTop_toTopOf="@id/iv_select_on_map_mode"
        app:layout_constraintBottom_toBottomOf="@id/iv_select_on_map_mode"

        android:text="@string/select_on_map_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#EEEE00" />

    <ImageView
        android:id="@+id/iv_favourites_mode"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:scaleType="fitXY"
        android:contentDescription="@string/favourites_mode_image_view_content_description"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/iv_select_on_map_mode"
        app:layout_constraintTop_toBottomOf="@+id/iv_nearest_objects_mode"
        android:src="@drawable/ic_favorite_red_24dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/iv_favourites_mode"
        app:layout_constraintEnd_toEndOf="@id/iv_favourites_mode"
        app:layout_constraintTop_toTopOf="@id/iv_favourites_mode"
        app:layout_constraintBottom_toBottomOf="@id/iv_favourites_mode"

        android:text="@string/favourites_label"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FF000000" />

</android.support.constraint.ConstraintLayout>